--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
         <div class="subheading mb-5">10103 NE 142nd Ave, Vancouver WA 98682 · (360) 869-8278 ·
           <a href="mailto:name@email.com">jordan.kasper@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced Technical Support Engineer .</p>
+        <p class="lead mb-5"> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock and am looking to move into the Data Science/UI Engineering space. 
+  
+          I enjoy the work I do now but I have always felt like there was something missing. I love working with frontend frameworks and am currently enjoying Vue.js. I enjoy developing how
+          users will interact with the data that is being presented and make it a fun and seemless experience.
+          
+          I also have a huge interest in how the data is stored and managed and what the systems look like that do this. I feel drawn 
+          to the engineering side as I still love to program and this hopefully will give a good balance of both worlds.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
