adding repo and demo links

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Pig Game</h3>
-            <p>jordan-kasper.github.io/pig-game-js</p>
-            <p>https://github.com/jordan-kasper/pig-game-js</p>
+            <a href="jordan-kasper.github.io/pig-game-js">Demo</a>
+            <a href="https://github.com/jordan-kasper/pig-game-js">Github Repo</a>
             <p>A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
             </p>
           </p>
@@ -272,8 +272,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vue Markdown App</h3>
-            <p>link: https://quirky-ramanujan-1f3f86.netlify.com/</p>
-            <p>https://github.com/jordan-kasper/vue-markdown-app</p>
+            <a href="https://quirky-ramanujan-1f3f86.netlify.com/">Demo</a>
+            <a href="https://github.com/jordan-kasper/vue-markdown-app">Github Repo</a>
             <p>This is a vue.js project that was created using vue.js and bootstrap 4 to allow users to test their markdown in the browsers with a preview window.
             </p>
           </p>
@@ -283,8 +283,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vue Task App</h3>
-            <p>https://lucid-booth-fab2c9.netlify.com/</p>
-            <p>https://github.com/jordan-kasper/vue-task-app</p>
+            <a href="https://lucid-booth-fab2c9.netlify.com/">Demo</a>
+            <a href="https://github.com/jordan-kasper/vue-task-app">Github Repo</a>
             <p>This is a vue.js project that was created with vue.js and vue-bootstrap.  It allows users to record tasks along with a priority that they need to be done.  Also allows for batch deletion along with saving data to local storage. 
             </p>
           </p>
@@ -294,8 +294,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">NBA Data Analysis</h3>
-            <p>jordan-kasper.github.io/NBA-Data-Analysis/p>
-            <p>      The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
+            <a href="jordan-kasper.github.io/NBA-Data-Analysis">Github Repo</a>
+            <p>The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
             </p>
             </p>
           </p>
