--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -69,13 +66,16 @@
         <div class="subheading mb-5">10103 NE 142nd Ave, Vancouver WA 98682 · (360) 869-8278 ·
           <a href="mailto:name@email.com">jordan.kasper@gmail.com</a>
         </div>
-        <p class="lead mb-5"> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock and am looking to move into the Data Science/UI Engineering space. 
-  
+        <p> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock and am looking to move into the Data Science/UI Engineering space. 
+        </p>
+        <p>
           I enjoy the work I do now but I have always felt like there was something missing. I love working with frontend frameworks and am currently enjoying Vue.js. I enjoy developing how
           users will interact with the data that is being presented and make it a fun and seemless experience.
-          
+      </p>
+      <p>
           I also have a huge interest in how the data is stored and managed and what the systems look like that do this. I feel drawn 
           to the engineering side as I still love to program and this hopefully will give a good balance of both worlds.</p>
+          <br>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -181,70 +181,6 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-      <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
@@ -262,8 +198,9 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Pig Game</h3>
-            <a href="jordan-kasper.github.io/pig-game-js">Demo</a>
-            <a href="https://github.com/jordan-kasper/pig-game-js">Github Repo</a>
+            <a href="jordan-kasper.github.io/pig-game-js"><i class="fas fa-desktop fa-2x"></i></a>
+            <a href="https://github.com/jordan-kasper/pig-game-js"><i class="fab fa-github fa-2x"></i>
+            </a>
             <p>A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
             </p>
           </p>
@@ -272,22 +209,29 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vue Markdown App</h3>
-            <a href="https://quirky-ramanujan-1f3f86.netlify.com/">Demo</a>
-            <a href="https://github.com/jordan-kasper/vue-markdown-app">Github Repo</a>
+            <a href="https://quirky-ramanujan-1f3f86.netlify.com/"><i class="fas fa-desktop fa-2x"></i></a>
+            <a href="https://github.com/jordan-kasper/vue-markdown-app"><i class="fab fa-github fa-2x"></i></a>
             <p>This is a vue.js project that was created using vue.js and bootstrap 4 to allow users to test their markdown in the browsers with a preview window.
             </p>
-          </p>
-          </p>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vue Task App</h3>
-            <a href="https://lucid-booth-fab2c9.netlify.com/">Demo</a>
-            <a href="https://github.com/jordan-kasper/vue-task-app">Github Repo</a>
+            <a href="https://lucid-booth-fab2c9.netlify.com/"><i class="fas fa-desktop fa-2x"></i></a>
+            <a href="https://github.com/jordan-kasper/vue-task-app"><i class="fab fa-github fa-2x"></i></a>
+            <br>
             <p>This is a vue.js project that was created with vue.js and vue-bootstrap.  It allows users to record tasks along with a priority that they need to be done.  Also allows for batch deletion along with saving data to local storage. 
             </p>
-          </p>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Vue Music App</h3>
+            <a href="https://unruffled-meninsky-2efddb.netlify.app/"><i class="fas fa-desktop fa-2x"></i></a>
+            <a href="https://github.com/jordan-kasper/vue-music-app"><i class="fab fa-github fa-2x"></i></a>
+            <br>
+            <p>This is a vue.js project that was created using vue.js, axios, and bootstrap 4 to allow users to search songs based off the deezer API. It also allows you to add your songs to a playlist and look up the artist from searched songs.</p>
           </p>
           </div>
         </div>
@@ -295,9 +239,8 @@
           <div class="resume-content">
             <h3 class="mb-0">NBA Data Analysis</h3>
             <a href="jordan-kasper.github.io/NBA-Data-Analysis">Github Repo</a>
+            <br>
             <p>The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
-            </p>
-            </p>
           </p>
           </div>
         </div>
