--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           to the engineering side as I still love to program and this hopefully will give a good balance of both worlds.</p>
           <br>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/jordan-kasper-204a7048/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/jordan-kasper">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/jordan.kasper.7">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -238,7 +238,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">NBA Data Analysis</h3>
-            <a href="jordan-kasper.github.io/NBA-Data-Analysis">Github Repo</a>
+            <a href="jordan-kasper.github.io/NBA-Data-Analysis"><i class="fab fa-github fa-2x"></i></a>
             <br>
             <p>The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
           </p>
