fixing typos and css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 class="mb-0">Jordan
           <span class="text-primary">Kasper</span>
         </h1>
-        <div class="subheading mb-5">10103 NE 142nd Ave, Vancouver WA 98682 · (360) 869-8278 ·
+        <div class="subheading mb-5">10103 NE 142nd Ave Vancouver, WA 98682 · (360) 869-8278 ·
           <a href="mailto:name@email.com">jordan.kasper@gmail.com</a>
         </div>
         <p> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock and am looking to move into the Data Science/UI Engineering space. 
