fixing typos and css

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">IBM Data Science Professional Certifcate</h3>
-            <div class="subheading mb-3">https://bit.ly/2ovPiro</div>
+            <div class="subheading mb-3"><a href="https://bit.ly/2ovPiro"> Certificate </a></div>
             <p>This Professional Certificate from IBM is intended for anyone interested in developing skills and experience to pursue a career in Data Science or Machine Learning.
             </p>
           </div>
