--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="subheading mb-5">10103 NE 142nd Ave Vancouver, WA 98682 · (360) 869-8278 ·
           <a href="mailto:name@email.com">jordan.kasper@gmail.com</a>
         </div>
-        <p> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock and am looking to move into the Data Science/UI Engineering space. 
+        <p> My name is Jordan Kasper I am currently a Senior Support Engineer at ForgeRock with a passion for data and Frontend development.  Currently I am looking to move into the UI Engineering space. 
         </p>
         <p>
           I enjoy the work I do now but I have always felt like there was something missing. I love working with frontend frameworks and am currently enjoying Vue.js. I enjoy developing how
