adding rockbeats to list of projects

--- a/index.html
+++ b/index.html
@@ -184,11 +184,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Pig Game</h3>
-            <a href="jordan-kasper.github.io/pig-game-js"><i class="fas fa-desktop fa-2x"></i></a>
-            <a href="https://github.com/jordan-kasper/pig-game-js"><i class="fab fa-github fa-2x"></i>
+            <h3 class="mb-0">RockBeats</h3>
+            <a href="https://stash.forgerock.org/projects/PROSERV/repos/rockbeats/browse"><i class="fab fa-github fa-2x"></i>
             </a>
-            <p>A simple game for two players where you try to get to 100 points first.  Each player rolls the dice and adds up the numbers they roll.  If a player rolls a 1 they lose their points for the round and its the next players turn.  They can hold their points and add to their score but their turn is over and its the next players turn.
+            <p>ForgeRock Identity Platform Healthcheck Tool
             </p>
           </p>
           </div>
