adding text to rockbeats

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h3 class="mb-0">RockBeats</h3>
             <a href="https://stash.forgerock.org/projects/PROSERV/repos/rockbeats/browse"><i class="fab fa-github fa-2x"></i>
             </a>
-            <p>ForgeRock Identity Platform Healthcheck Tool
+            <p>ForgeRock Identity Platform Healthcheck Tool.  Used by Customer Success and customers to review ForgeRock configurations.
             </p>
           </p>
           </div>
