--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">RockBeats</h3>
-            <a href="https://stash.forgerock.org/projects/PROSERV/repos/rockbeats/browse"><i class="fab fa-github fa-2x"></i>
+            <a href="https://stash.forgerock.org/projects/PROSERV/repos/rockbeats/browse"><i class="fab fa-bitbucket fa-2x"></i>
             </a>
             <p>ForgeRock Identity Platform Healthcheck Tool.  Used by Customer Success and customers to review ForgeRock configurations.
             </p>
