--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">RockBeats</h3>
+            <h3 class="mb-0">RockBeats (Internal Only)</h3>
             <a href="https://stash.forgerock.org/projects/PROSERV/repos/rockbeats/browse"><i class="fab fa-bitbucket fa-2x"></i>
             </a>
             <p>ForgeRock Identity Platform Healthcheck Tool.  Used by Customer Success and customers to review ForgeRock configurations.
@@ -224,7 +224,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">NBA Data Analysis</h3>
-            <a href="jordan-kasper.github.io/NBA-Data-Analysis"><i class="fab fa-github fa-2x"></i></a>
+            <a href="NBA-Data-Analysis"><i class="fab fa-github fa-2x"></i></a>
             <br>
             <p>The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
           </p>
