--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">NBA Data Analysis</h3>
-            <a href="NBA-Data-Analysis"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/jordan-kasper/vue-nba-viewer"><i class="fab fa-github fa-2x"></i></a>
             <br>
             <p>The purpose of this project is to see if we can predict if the Portland Trail Blazers will win a game based off of the box score stats. The goals of this project are to practice data analyis and working with data.
           </p>
